EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==05/21/2009==
Trevius: Added new quest command quest::saylink() to create itemlinks in quest text that can be clicked for a response

Recommended SQL: .\utils\sql\svn\553_saylink_table.sql

==05/20/2009==
Angelox: Bots- Bots can't stack invis-undead, invis-live, or any other invis type spell.
KLS: Fix for NPCs jumping in place when they have the fixpathingZ rules for movement enabled.
KLS: Traps will no longer attempt to clean up their npcs, every time a trap is destroyed so are the NPCs so it's redundant and risky.
Congdar: Bots - Added Magician AA Elemental Durability, Fixed #bot corpse summon, AI Tweak

==05/19/2009==
Trevius: Identified hairstyle, haircolor, beard, and beardcolor in the Titanium Illusion struct so the related commands now work in Titanium.
KLS: PvP info will only be set if the server type is set to 1 (pvp)
KLS: Adjusted chances on dodge/parry/riposte modifiers
KLS: Made experience con scaling into a rule.
KLS: Added Rules: (Character, UseXPConScaling), (Character, LightBlueModifier), (Character, BlueModifier), (Character, WhiteModifier), (Character, YellowModifier), (Character, RedModifier)
Derision: Bandolier bug fix.
Derision: Equipped items that should confer an extra potion belt slot now do so in Titanium and the 6.2 client (was already working in SoF).
Angelox: Bots- (Congdar) fixed Bot illusion / change form spells as to who is affected.
Angelox: Bots- added check to Bot pacify for casting from a distance. 


==05/18/2009==
Trevius: New Commands added: #face, #helm, #hair, #haircolor, #beard, #beardcolor, #heritage, #tattoo, #details
Trevius: Adjusted the #fixmob command to use all features.  The new format is "#fixmob featurename prev/next"
Trevius: Corrected the R524 optional SQL file

==05/16/2009==
Trevius: (Shendare) Added armor tinting functionality for NPCs by setting it in the npc_types table