@@ -384,6 +384,7 @@ OP_ZoneComplete=0x0000
 OP_ItemLinkText=0x0000
 OP_ClearObject=0x8258
 OP_DisciplineUpdate=0x7180
+OP_DisciplineTimer=0x53df
 OP_LocInfo=0x0000
 OP_FindPersonRequest=0x3c41		# ShowEQ 06/29/05
 OP_FindPersonReply=0x5711
