@@ -278,6 +278,7 @@ OP_DuelResponse2=0x2A85			#
 OP_Charm=0x2F32				#
 OP_Stun=0x55BF				#
 OP_DisciplineUpdate=0x0000		#
+OP_DisciplineTimer=0x53c5
 OP_FindPersonRequest=0x07F0		#
 OP_FindPersonReply=0x7770		#
 OP_Sound=0x2B02				#
