@@ -387,6 +387,7 @@ OP_RaidUpdate=0x1f21			# EQEmu 06/29/05
 OP_ZoneComplete=0x0000
 OP_ItemLinkText=0x0000
 OP_DisciplineUpdate=0x7180
+OP_DisciplineTimer=0x53df
 OP_LocInfo=0x0000
 OP_FindPersonRequest=0x3c41			# ShowEQ 10/27/05
 OP_FindPersonReply=0x5711			# ShowEQ 10/27/05
